Fixed timer cutoff error

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -25,7 +25,7 @@ button {
     background-image:linear-gradient(70deg,#4B79A1,#283E51); /* Dark Sky Gradient */
     /*border: 2px solid #283E51; /* Blue */
     border-radius: 1rem;
-    margin-top: 1em;
+    /*margin-top: 1em;*/
     padding-left: 1rem;
     padding-right: 1rem;
     padding-top: 0.5rem;
@@ -48,6 +48,8 @@ button {
 #label {
     font-family: Helvetica;
     font-weight: bold;
+    margin: 0;
+    padding: 0;
 }
 
 #stats {
